                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-02-2006 added: Control.IsVisible(id) visibility condition.
 - 28-02-2006 fixed: Play DVD button on home wouldn't work for the first few seconds after it appeared.
 - 28-02-2006 changed: Screensaver will now kick in if a modal dialog is onscreen.
 - 28-02-2006 added: A little more exception handling to a couple of program database functions.
 - 28-02-2006 changed: GUI messages are sent to all controls with the given id, rather than just the first one.
 - 28-02-2006 changed: MultiImages with blank <info> fallback to the <imagepath> path.
 - 28-02-2006 added: Multiple <onclick> tags are allowed in button controls.  You can also use keymap actions in <onclick> tags as well.  Actions are executed in the order given.
 - 28-02-2006 added: Window.Next(id) and Window.Previous(id) conditionals active during changing of windows.
 - 28-02-2006 added: condition attribute to animations, allowing you to turn them off based on a condition.
 - 28-02-2006 changed: Files mode does not show tag info from the database if you have id3 reading disabled
 - 28-02-2006 fixed: Initial control focus on Yes/No and Context menu is now set in the code.
 - 27-02-2006 fixed: dvdplayer would resume properly after changing setting that required restart 
 - 27-02-2006 fixed: when player was restarted due to some osd change, force player wasn't allways selected
 - 27-02-2006 fixed: dvdplayer didn't respect "Output To All Speakers" setting for 2ch AC3's
 - 27-02-2006 fixed: threading problem with smb directory
 - 27-02-2006 fixed: threading problem with opening/closing of files from dll's