@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 28-02-2006 fixed: Actions could be sent to modal dialogs that were animating out.
+ - 28-02-2006 fixed: Blank bookmark for resume time was shown in bookmarks.
+ - 28-02-2006 fixed: [ 1438714 ] @-sign causes 'Invalid computer name'
  - 28-02-2006 added: Control.IsVisible(id) visibility condition.
  - 28-02-2006 fixed: Play DVD button on home wouldn't work for the first few seconds after it appeared.
  - 28-02-2006 changed: Screensaver will now kick in if a modal dialog is onscreen.
